@@ -146,6 +146,9 @@ Release 2.7.3 - UNRELEASED
     HDFS-9904. testCheckpointCancellationDuringUpload occasionally fails.
     (Lin Yiqun via kihwal)
 
+    HDFS-9874. Long living DataXceiver threads cause volume shutdown to block.
+    (Rushabh Shah via kihwal)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
